--- a/carohr.html
+++ b/carohr.html
@@ -620,7 +620,7 @@
 	
       <div class="col">
 		<div style="position:relative">
-          <div class="card h-100 shadow-sm" style="opacity: 1; transition: opacity .5s; transform: scale(0.8); filter: blur(70px); width: 100%; height: 100%; background-image: linear-gradient(132deg, #5ddcff, #3c67e3 43%, #4e00c2); animation: spin 4.5s linear infinite;">
+          <div class="card h-100 shadow-sm" style="opacity: 1; transition: opacity .5s; transform: scale(0.8); filter: blur(70px); width: 100%; height: 100%; background-image: linear-gradient(var(--rotate), #5ddcff, #3c67e3 43%, #4e00c2); animation: spin 4.5s linear infinite;">
 		    <svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#incognit"/></svg>
 		    <div class="card-body" style="text-align: center">
               <p class="card-text">The</p>
@@ -629,7 +629,7 @@
             </div>
           </div>
 		  <div style="position:absolute; width:100%; top: -2%; height: 103%;">
-            <div class="card h-100 shadow-sm" style="border-radius: 8px; width: 104%; height: 100%; left:-2%; background-image: linear-gradient(132deg, #5ddcff, #3c67e3 43%, #4e00c2); animation: spin 4.5s linear infinite;">
+            <div class="card h-100 shadow-sm" style="border-radius: 8px; width: 104%; height: 100%; left:-2%; background-image: linear-gradient(var(--rotate), #5ddcff, #3c67e3 43%, #4e00c2); animation: spin 4.5s linear infinite;">
 		      <svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#incognit"/></svg>
 		      <div class="card-body" style="text-align: center">
                 <p class="card-text">The</p>
