--- a/indexn.html
+++ b/indexn.html
@@ -827,7 +827,7 @@
 <!-- NFT Collection -->
     <div class="reveal album">
       <h2 class="featurette-heading fw-normal lh-1">Our First NFT Collection</h2>
-      <p class="lead text-warning" style="padding-bottom:2rem"><b>Launching Soon!</b></p>
+      <p class="lead txt anim-text-flow" style="padding-bottom:2rem"><b>Launching Soon!</b></p>
 		    
       <div class="container">
 
@@ -863,16 +863,16 @@
         </div>
         <div class="col">
           <div class="card shadow-sm" style="background-color: transparent; border-color: transparent">
-           <img src="3.png" class="card-img-top" alt="...">
+           <img src="3.jpg" class="card-img-top" alt="...">
 		   <div class="card-body">
              
               <div class="d-flex justify-content-between align-items-center">
-            <!--    <div class="btn-group">
+               <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">Info</button>
                   <button type="button" class="btn btn-sm btn-outline-primary">Buy Now</button>
                 </div>
-                <small class="text-body-secondary">#003</small> -->
-				  <h2 class="featurette-heading fw-bold lh-1 txt anim-text-flow" style="text-align:center">Launching Soon!</h2>
+                <small class="text-body-secondary">#003</small> 
+				 <!--  <h2 class="featurette-heading fw-bold lh-1 txt anim-text-flow" style="text-align:center">Launching Soon!</h2> -->
               </div>
             </div> 
           </div>
