--- a/indexn.html
+++ b/indexn.html
@@ -827,7 +827,7 @@
 <!-- NFT Collection -->
     <div class="reveal album">
       <h2 class="featurette-heading fw-normal lh-1">Our First NFT Collection</h2>
-      <p class="lead txt anim-text-flow" style="padding-bottom:2rem"><b>Launching Soon!</b></p>
+      <p class="lead txt anim-text-flow" style="padding-bottom:2rem">Launching Soon!</p>
 		    
       <div class="container">
 
