--- a/indexn.html
+++ b/indexn.html
@@ -145,7 +145,7 @@
 /* Top layer for The Collection to sit on top gradient layers */	
  
 	.hoverlay {
-      background-image: url('sticker3.png');
+      background-image: url('stickers.png');
       background-repeat: no-repeat;
       background-size: contain;
       background-position: center;
