--- a/indexn.html
+++ b/indexn.html
@@ -583,7 +583,7 @@ position:relative;
           <div class="card h-100 shadow-sm" style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(0px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)">
 		   <svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
 		   <div class="card-body" style="text-align: center">
-             <p class="card-text">Three</p>
+             <p class="card-text">The</p>
              <div class="d-flex justify-content-between align-items-center">
              </div>
             </div>
@@ -592,7 +592,7 @@ position:relative;
           <div class="card h-100 shadow-sm" style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(0px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)">
 		   <svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
 		   <div class="card-body" style="text-align: center">
-              <p class="card-text">Three</p>
+              <p class="card-text">The</p>
               <div class="d-flex justify-content-between align-items-center">
               </div>
             </div>
@@ -614,10 +614,10 @@ position:relative;
 	
       <div class="col">
 		<div style="position:relative">
-          <div class="card h-100 shadow-sm" style="opacity: 1; transition: opacity .5s; transform: scale(0.8); filter: blur(70px); width: 100%; height: 100%; background-image: linear-gradient(132deg, #5ddcff, #3c67e3 43%, #4e00c2); animation: spin 4.5s linear infinite;">
+          <div class="card h-100 shadow-sm" style="opacity: 1; transition: opacity .5s; transform: scale(0.8); filter: blur(40px); width: 100%; height: 100%; background-image: linear-gradient(132deg, #5ddcff, #3c67e3 43%, #4e00c2); animation: spin 4.5s linear infinite;">
 		    <svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#incognito"/></svg>
 		    <div class="card-body" style="text-align: center">
-              <p class="card-text">The</p>
+              <p class="card-text">Three</p>
               <div class="d-flex justify-content-between align-items-center">
               </div>
             </div>
@@ -626,7 +626,7 @@ position:relative;
             <div class="card h-100 shadow-sm" style="border-radius: 8px; width: 104%; height: 100%; left:-2%; background-image: linear-gradient(132deg, #5ddcff, #3c67e3 43%, #4e00c2); animation: spin 4.5s linear infinite;">
 		      <svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#incognito"/></svg>
 		      <div class="card-body" style="text-align: center">
-                <p class="card-text">The</p>
+                <p class="card-text">Three</p>
                 <div class="d-flex justify-content-between align-items-center">
                 </div>
               </div>
@@ -651,7 +651,7 @@ position:relative;
           <div class="card h-100 shadow-sm" style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(0px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)">
 		   <svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
 		   <div class="card-body" style="text-align: center">
-             <p class="card-text">Three</p>
+             <p class="card-text">Amigos</p>
              <div class="d-flex justify-content-between align-items-center">
              </div>
             </div>
@@ -660,7 +660,7 @@ position:relative;
           <div class="card h-100 shadow-sm" style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(0px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)">
 		   <svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
 		   <div class="card-body" style="text-align: center">
-              <p class="card-text">Three</p>
+              <p class="card-text">Amigos</p>
               <div class="d-flex justify-content-between align-items-center">
               </div>
             </div>
