--- a/indexn.html
+++ b/indexn.html
@@ -789,7 +789,7 @@ position:relative;
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
    <!--     <span style="background-image: linear-gradient(55deg, #0b5ed7 10%, #D187FF 90%)" class="carousel-control-prev-icon" aria-hidden="true"></span>
---> <svg class="text-primary text-body-primary flex-shrink-0 me-3" style="transform: rotate(-90deg)" width="2.75em" height="2.75em" fill="url(#my-cool-gradient)"><use xlink:href="#rocket"></use></svg>
+--> <svg class="text-primary text-body-primary flex-shrink-0 me-3" style="transform: rotate(-90deg)" width="2.75em" height="2.75em" fill="url(#my-cool-gradient)"><use xlink:href="#rocket-takeoff"></use></svg>
                  
 	   <span class="visually-hidden">Previous</span>
       </button>
