--- a/indexn.html
+++ b/indexn.html
@@ -746,7 +746,7 @@ position:relative;
  <div class="container marketing" style="text-align: center">
  
 
-<div id="carouselExampleCaptions" class="carousel slide pointer-event" style="padding-top:3rem">
+<div id="carouselExampleCaptions" class="reveal carousel slide pointer-event" style="padding-top:3rem">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -754,7 +754,7 @@ position:relative;
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-            <div class="reveal row featurette">
+            <div class="row featurette">
       <div class="col-lg-7">
         <h2 class="featurette-heading fw-normal lh-1">T-Shirts <span class="text-body-secondary" style="color:#0d6efd !important"></span></h2>
         <p class="lead">Black / White ~ All Sizes Available</p>
@@ -770,7 +770,7 @@ position:relative;
 	</div>
         </div>
         <div class="carousel-item">
-    <div class="reveal row featurette">
+    <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">Stickers & Magnets <span class="text-body-secondary" style="color:#0d6efd !important"></span></h2>
         <p class="lead">3"x 3" ~ Custom Sizes Also Available</p>
@@ -789,7 +789,7 @@ position:relative;
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
    <!--     <span style="background-image: linear-gradient(55deg, #0b5ed7 10%, #D187FF 90%)" class="carousel-control-prev-icon" aria-hidden="true"></span>
---> <svg class="text-primary text-body-primary flex-shrink-0 me-3" style="transform: rotate(-90deg)" width="2.75em" height="2.75em" fill="url(#my-cool-gradient)"><use xlink:href="#rocket-takeoff"></use></svg>
+--> <svg class="text-primary text-body-primary flex-shrink-0 me-3" style="transform: rotate(-135deg)" width="2.75em" height="2.75em" fill="url(#my-cool-gradient)"><use xlink:href="#rocket-takeoff"></use></svg>
                  
 	   <span class="visually-hidden">Previous</span>
       </button>
