--- a/indexn.html
+++ b/indexn.html
@@ -838,6 +838,7 @@ position:relative;
       <h2 class="txt anim-text-flow">Launching Soon!</h2>
 <div class="d-flex flex-column flex-md-row p-4 gap-4 py-md-5 align-items-center justify-content-center">
   <div class="list-group">  
+	  <div class="d-flex gap-2 w-100 justify-content-between">
     <ul id="ul" style="padding-left:0 !important">
     <li><img src="r2.png" alt=""></li>
     <li><img src="r1.png" alt=""></li>
@@ -854,6 +855,7 @@ position:relative;
       </defs>
     </svg>	   
   </div>
+	</div>
 </div>	 
 	 
 	 
