--- a/indexn.html
+++ b/indexn.html
@@ -836,9 +836,9 @@ position:relative;
 
  <h1 class="featurette-heading fw-normal lh-1">Our First NFT Collection</h1>
       <h2 class="txt anim-text-flow">Launching Soon!</h2>
-<div class="d-flex flex-column flex-md-row p-4 gap-4 py-md-5 align-items-center justify-content-center">
+<div class="d-flex flex-column flex-md-row p-4 gap-4 py-md-5 align-items-center justify-content-center" style="height:16rem">
   <div class="list-group">  
-	  <div class="d-flex gap-2 w-100 justify-content-between">
+	  <div class="d-flex gap-2 w-100 justify-content-between" style="position:relative; height:16rem">
     <ul id="ul" style="padding-left:0 !important">
     <li><img src="r2.png" alt=""></li>
     <li><img src="r1.png" alt=""></li>
