--- a/indexn.html
+++ b/indexn.html
@@ -340,7 +340,41 @@ position:relative;
   display: none;
 }	
 */
-	
+.gradient-border {
+  --border-width: 3px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 200px;
+  font-family: Lato, sans-serif;
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  color: white;
+  background: #222;
+  border-radius: var(--border-width);
+}
+.gradient-border::after {
+  position: absolute;
+  content: "";
+  top: calc(-1 * var(--border-width));
+  left: calc(-1 * var(--border-width));
+  z-index: -1;
+  width: calc(100% + var(--border-width) * 2);
+  height: calc(100% + var(--border-width) * 2);
+  background: linear-gradient(60deg, #5f86f2, #a65ff2, #f25fd0, #f25f61, #f2cb5f, #abf25f, #5ff281, #5ff2f0);
+  background-size: 300% 300%;
+  background-position: 0 50%;
+  border-radius: calc(2 * var(--border-width));
+  animation: moveGradient 4s alternate infinite;
+}
+
+@keyframes moveGradient {
+  50% {
+    background-position: 100% 50%;
+  }
+}	
 	
 
   </style>
@@ -668,7 +702,7 @@ position:relative;
           </div>
 		  </div>
 		  <div style="position:absolute; top:0px; width:100%">
-		            <div class="card h-100 shadow-sm">
+		            <div class="gradient-border card h-100 shadow-sm">
 <svg width="100%" height="150" style="padding: 0.5rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#astrh"/></svg>
 		   <div class="card-body" style="text-align: center">
               <p class="card-text">Amigos</p>
