--- a/indexn.html
+++ b/indexn.html
@@ -342,7 +342,7 @@ position:relative;
 */
 .gradient-border {
   --border-width: 3px;
-  position: relative;
+ /* position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -353,7 +353,7 @@ position:relative;
   text-transform: uppercase;
   color: white;
   background: #222;
-  border-radius: var(--border-width);
+  border-radius: var(--border-width); */
 }
 .gradient-border::after {
   position: absolute;
