--- a/indexn.html
+++ b/indexn.html
@@ -51,7 +51,7 @@
   <link href="bootstrap.min.css" rel="stylesheet">
   <link href="carousel.css" rel="stylesheet">
 
-
+<script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
 <style>
 
 /* Bootstrap */	 
