--- a/indexn.html
+++ b/indexn.html
@@ -1077,7 +1077,7 @@ position:relative;
 
   <div class="row">
     <div class="col align-self-start">
-	<model-viewer src="mech_drone_glb.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1" autoplay> </model-viewer>
+	<model-viewer src="mech_drone_glb.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" style="width: 100% !important" shadow-intensity="1" autoplay> </model-viewer>
     </div>
     <div class="col align-self-end">
  	<button class="dbutton">
