--- a/indexn.html
+++ b/indexn.html
@@ -1079,14 +1079,14 @@ position:relative;
     <div class="col align-self-start">
 	<model-viewer src="mech_drone_glb.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" style="width: 100% !important" shadow-intensity="1" autoplay> </model-viewer>
     </div>
-    <div class="col align-self-end">
+<!--    <div class="col align-self-end">
  	<button class="dbutton">
         <span class="default">Paper Airplane!</span>
         <span class="success">Launched...</span>
         <div class="left"></div>
         <div class="right"></div>
         </button> 
-    </div>
+    </div> -->
   </div>
  <!--    <p class="float-end" style="margin-bottom:0rem; padding-bottom:2rem"><a href="#">Back to top</a></p> -->
    <p style="margin-bottom:0rem; padding-bottom:2rem"> </p> 
