--- a/indexll.html
+++ b/indexll.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - CSS Lava Lamp</title>
-  <link rel='stylesheet' href='https://codepen.io/404ryannotfound/pen/qBdVPyB.css'><link rel="stylesheet" href="./style.css">
+  <link rel='stylesheet' href='https://codepen.io/404ryannotfound/pen/qBdVPyB.css'><link rel="stylesheet" href="stylell.css">
 
 </head>
 <body>
