--- a/indexll.html
+++ b/indexll.html
@@ -37,7 +37,9 @@ https://codepen.io/Rosefae/pen/XPaMYL
   </defs>
 </svg>
 
-<h1 class="text-light">CSS Lava Lamp</h1>
+<h1 style="background: -webkit-linear-gradient(55deg, #6f05e3 10%, #fa086d 50%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;">CSS Lava Lamp</h1>
 <p class="text-light">Originally by Rose Lui</p>
 <!-- partial -->
   
